2005-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/SQL.pm: New module dependency: DBIx::Sequence

2005-10-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/SQL.pm: new module dependencies:
	DBIx::Abstract, DBI.

2005-10-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm:
	added support for dual-CPU cisco routers (7301)

2005-09-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/AlliedTelesyn_PBC18.pm:
	new discovery module

2005-09-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm:
	New discovery parameter: define-tokensets

2005-08-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	Replaced $Torrus::DevDiscover::listAdminDownInterfaces
	with parameter RFC2863_IF_MIB::list-admindown-interfaces
	and $Torrus::DevDiscover::listNotPresentInterfaces
	with RFC2863_IF_MIB::list-notpresent-interfaces

2005-08-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* doc/extstorage.pod.in: Started documenting the External storage

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	New discovery parameter: RFC2863_IF_MIB::external-serviceid

	* xmlconfig/generic/rfc2863.if-mib.xml: Byte counters adapted for
	External storage

	* perllib/Torrus/Collector.pm: Multiple storage types per token

	* perllib/Torrus/ConfigTree/Validator.pm (validateInstanceParams):
	Enabled validation of list values

	* perllib/Torrus/Collector/ExtDBI.pm: Pluggable backend module for
	External storage

	* perllib/Torrus/Collector/ExternalStorage.pm:
	New collector storage type

2005-08-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.3

2005-07-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: Patch Level 1: PERLINC configuration variable
