@@ -26,6 +26,9 @@
            IF isAlias(child);
              thisIsAlias = 1;
              urlTitle=' TITLE="Symbolic link to ' _ path(isAlias(child)) _'"';
+             IF isLeaf(isAlias(child));
+               hasLeaves = hasLeaves + 1;
+             END;
            ELSE;
              hasSubtrees = 1;
              urlTitle = '';
